# jopa

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  ENUM_IMPLEMENTATION_PROGRESS.md  EXPLANATION.md  FEATURE_INVESTIGATION_SUMMARY.md  INSTALL  JAVA5_IMPLEMENTATION_PLAN.md  LICENSE  Makefile  README  README.md  TESTING_INFRASTRUCTURE.md  TODO.md  VARARGS_SUCCESS_SUMMARY.md  configure  configure.ac  flake.nix  java.l  test-grammar.l  test-grammar.t
.github/: CI_CD_SETUP.md
cmake/: Config.h.in
devjopak/: CMakeLists.txt  devjopak-validate.sh  ecj_build.cmake
doc/: Makefile
docs/: CI_VERIFICATION.md  CONTRIBUTING.md  ENUM_SUCCESS_SUMMARY.md  FIX_REPORT_CATEGORY_1_3.md  FIX_REPORT_FINAL.md  FIX_REPORT_JDK7_UPDATE.md  FIX_REPORT_TYPE_INFERENCE_1.md  FIX_REPORT_TYPE_INFERENCE_2.md  FIX_REPORT_UNBOXING_WIDENING.md  JDK7_COMPLIANCE_ANALYSIS.md  JDK7_COMPLIANCE_FAILURES.md  JDK7_COMPLIANCE_ROADMAP.md  JDK7_COMPLIANCE_UPDATE_1.md  JDK7_COMPLIANCE_UPDATE_2.md  PHASE2_SESSION_SUMMARY.md  SESSION_PROGRESS_COMPREHENSIVE.md  TESTING_INFRASTRUCTURE.md  java.l  java7.g  java7.l  java7.t  java7dcl.h  java7def.h  java7prs.h  java7sym.h  java_clean.g  java_clean.l  jikes.1
runtime/: CMakeLists.txt  Tester.java  (+2 more)
src/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  access.h  ast.cpp  ast.h  ast_json.cpp  ast_json.h  ast_serializer.cpp  ast_serializer.h  body.cpp  bytecode.cpp  bytecode.h  case.cpp  case.h  class.cpp  class.h  code.cpp  code.h  config.cpp  config.h  control.cpp  control.h  decl.cpp  definite.cpp  depend.cpp  depend.h  diagnose.cpp  diagnose.h  double.cpp  double.h  dump.cpp  error.cpp  error.h  expr.cpp  expr_lookup.cpp  expr_names.cpp  expr_ops.cpp  expr_primary.cpp  (+66 more)
src/autom4te.cache/: output.0  requests  traces.0
src/codegen/: bytecode.cpp  bytecode.h  bytecode_expr.cpp  bytecode_init.cpp  bytecode_ops.cpp  bytecode_stmt.cpp  class.cpp  class.h  segment.cpp  segment.h
src/grammar/: CMakeLists.txt  java.g  java.l  javaact.cpp  javadcl.h  javadef.h  javaprs.h  javasym.h  postprocess.py
src/grammar2/: CMakeLists.txt  java.g  java.l  javadcl.h  javadef.h  javaprs.h  javasym.h  postprocess.py
src/jcl/: README
src/parser/: diagnose.cpp  diagnose.h  lpginput.h  parser.cpp  parser.h  scanner.cpp  scanner.h  stream.cpp  stream.h
test/: CMakeLists.txt  ChainedGenericReturnType.java  EnumConstantsTest.java  FormatHierarchyTest.java  jdk7_compliance_whitelist.txt  jdk7_parser_whitelist.txt  jdk8_compliance_whitelist.txt  jdk8_parser_whitelist.txt  parser_test_blacklist.txt
test-generics/: .gitignore  .test-results  AnnotationTest.java  ArityError.java  BoundedBox.java  BridgeTest.java  CMakeLists.txt  ColorTest.java  ComprehensiveTest.java  ForEachIterableTest.java  GenericBox.java  GenericConstructorTest.java  GenericMethodRuntimeTest.java  JAVA5_FEATURE_SURVEY.md  JAVA5_SUMMARY.txt  MathUtils.java  MethodBoxingTest.java  NoImportTest.java  Pair.java  ReturnBoxingTest.java  SimpleBox.java  SimpleParameterizedType.java  SimpleStaticImportTest.java  StandaloneTest.java  StaticImportNoUseTest.java  StaticImportTest.java  StaticMethodImportTest.java  TEST_RESULTS.md  TEST_RESULTS_FINAL.md  TwoTypeParams.java  TypeSubstitutionTest.java  VarargsTest.java  VerySimple.java  run-tests.sh
test-generics/runtime/java/lang/: Boolean.java  Byte.java  Character.java  Class.java  CloneNotSupportedException.java  Error.java  Exception.java  Float.java  Integer.java  Long.java  Short.java  String.java
test-generics/runtime/java/util/: ArrayList.java
test-generics/util/: MathUtils.java
test/annotations/: AnnotationTest.java  CustomAnnotationTest.java  MarkerAnnotationTest.java  RuntimeRetentionTest.java  SuppressWarningsTest.java
test/anonymous/: AnonymousClassTest.java  AnonymousGenericTest.java  CapturedIteratorTest.java  TypeTokenTest.java
test/autoboxing/: ArithmeticBoxingSimple.java  ArithmeticBoxingTest.java  AutoboxingTest.java  BasicBoxingTest.java  BooleanOperatorBoxingTest.java  MethodBoxingSimple.java  NumericBitwiseBoxingTest.java  ReturnBoxingSimple.java  SimpleMethodBoxingTest.java
test/debug/: PrimitiveClassTest.java  RawGenericTest.java
test/enums/: Color.java  EnumMethodsTest.java  EnumTest.java  EnumTopLevelSwitchTest.java
test/foreach/: BoxedForeachTest.java  ForEachArrayTest.java  ForEachTest.java
test/generics/: AllFeatures.java  AnonClassTypeParamTest.java  ArrayCloneTest.java  ArrayCovarianceTest.java  BooleanUnbox.java  BoundedBox.java  BoundedErasureTest.java  BoundedGeneric.java  BridgeTest.java  ChainedGenericsTest.java  ComprehensiveTest.java  ConstructorOverloadTest.java  CovariantReturnTest.java  DoPrivilegedTest.java  EnumConstructorTest.java  EnumForwardRef.java  ExplicitTypeArgs.java  FieldAccessTest.java  GenericBase.java  GenericBox.java  GenericMethodInferenceTest.java  GenericMethodRuntimeTest.java  GenericMethodTest.java  GenericMethods.java  GenericReturnTypeTest.java  GenericTest.java  GenericVarianceTest.java  GenericsComprehensiveTest.java  ImportMapTest.java  InheritedGenericTest.java  InheritedInterfaceTest.java  InterfaceGenericTest.java  InterfaceTypeArgTest.java  IteratorGenericTest.java  IteratorReturnTypeTest.java  JarInterfaceTest.java  LocalInheritTest.java  LocalInterfaceTest.java  MethodOverloadTest.java  MultiInterfaceGenericsTest.java  (+20 more)
test/java6/: ReflectionBasicTest.java  SimpleJava6Test.java
test/java7/: DiamondTest.java  EnumSwitchTest.java  MultiCatchTest.java  SimpleStringSwitch.java  SimpleTryFinallyTest.java  StringSwitchTest.java  TryWithResourcesTest.java
test/java8/: DefaultMethodTest.java
test/multifile/: MultiFileTest.java  Service.java  ServiceImpl.java
test/reflection/: ReflectionComprehensiveTest.java  ReflectionMinimalTest.java
test/stackmap/: BooleanExprAsArgTest.java  StackMapTableTest.java
test/static-imports/: NoStaticImportTest.java  StaticFieldOnlyTest.java  StaticImportFromRuntimeTest.java  StaticImportTest.java  StaticWildcardImportTest.java
test/varargs/: VarargsImplicitTest.java  VarargsMethodTest.java  VarargsSimpleTest.java  VarargsTest.java
(+544 files in other folders)
